--- a/06_acceso_a_uniprot.ipynb
+++ b/06_acceso_a_uniprot.ipynb
@@ -13,20 +13,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "28390287",
-   "metadata": {},
-   "source": [
-    "La url de uniprot es \"https://www.uniprot.org/uniprot\", \n",
-    "pero en algunos sistemas no puede usarse correctamente.\n",
-    "En su lugar podemos usar \"https://histidine.dbi.udel.edu/uniprot/\"."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1476a20a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "library(httr)"
@@ -36,11 +30,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "49452f26",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "# base_url   <- \"https://histidine.dbi.udel.edu/uniprot/\"\n",
-    "base_url   <- \"https://www.uniprot.org/uniprot/\""
+    "base_url   <- \"https://rest.uniprot.org/uniprotkb/search\""
    ]
   },
   {
@@ -58,7 +55,7 @@
     "\n",
     "Además tenemos que buscar definir el formato en el que queremos los datos: Tipicamente, en formato tabular y fasta para las secuencias.\n",
     "\n",
-    "Por último que tenemos que definir que datos queremos recuperar (columnas): https://www.uniprot.org/help/uniprotkb_column_names."
+    "Por último que tenemos que definir que datos queremos recuperar: https://www.uniprot.org/help/return_fields"
    ]
   },
   {
@@ -66,22 +63,42 @@
    "id": "2b492efd",
    "metadata": {},
    "source": [
-    "Por ejemplo: queremos recuperar datos de proteínas polymerases de E. coli que pertenezcan a Swiss-Prot (es decir que estén curadas manualmente)."
+    "Por ejemplo: queremos recuperar datos de proteínas polymerases de E. coli que\n",
+    "\n",
+    "pertenezcan a Swiss-Prot (es decir que estén curadas manualmente)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d47b3d9d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "query <- 'name:RNA polymerase AND organism:\"Escherichia coli\" AND reviewed:yes'\n",
+    "query <- 'protein_name:(RNA polymerase) AND (organism_name:\"Escherichia coli\") AND (reviewed:true)'\n",
     "\n",
     "respuesta <- GET(\n",
     "    base_url,\n",
-    "    query=list(query=query, format=\"tab\", columns=\"id,entry name,protein names\")\n",
+    "    query=list(query=query, format=\"tsv\", fields=\"id,accession,protein_name,go_id\")\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e2efa0a",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "read.table(text=content(respuesta), header=TRUE, sep=\"\\t\")"
    ]
   },
   {
@@ -89,7 +106,10 @@
    "execution_count": null,
    "id": "551221fc",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -98,10 +118,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3d94a176",
+   "metadata": {},
+   "source": [
+    "Podemos descargar los secuencias de estas proteinas en formato fasta\n",
+    "cambiando el formato de la respuesta.\n",
+    "\n",
+    "[Uniprot reference](https://www.uniprot.org/help/api_queries#list-of-all-formats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "651d9f94",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "query <- 'protein_name:(RNA polymerase) AND (organism_name:\"Escherichia coli\") AND (reviewed:true)'\n",
+    "\n",
+    "respuesta <- GET(\n",
+    "    base_url,\n",
+    "    query=list(\n",
+    "        query=query,\n",
+    "        format=\"fasta\",\n",
+    "        fields=\"id,protein_name\"\n",
+    "    )\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "639a14f4",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "?httr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3629e6d2",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "status_code(respuesta)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7405fa8c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Podemos recuperar las secuencias de los registros de a uno\n",
@@ -117,7 +203,10 @@
    "execution_count": null,
    "id": "3656e323",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -125,54 +214,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79eac38c",
+   "cell_type": "markdown",
+   "id": "abe721e0",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# O podemos usar un servicio especial para recuperar varias secuencias.\n",
-    "retrieve_url <- 'https://www.uniprot.org/uploadlists'\n",
-    "respuesta <- GET(\n",
-    "    url=retrieve_url,\n",
-    "    query=list(\n",
-    "        query=paste(ecoli_pol$Entry,collapse=\" \"),\n",
-    "        format=\"fasta\",\n",
-    "        from='ACC+ID',\n",
-    "        to='ACC'\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "930b116e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat(content(respuesta, as=\"text\"))"
+    "Como acceder a las secuencias"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a4f3f433",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "# install.packages('seqinr')\n",
     "# Para leer formato fasta\n",
-    "library(seqinr)\n",
+    "# install.packages('seqinr')\n",
+    "# library(seqinr)\n",
     "sequences <- read.fasta(file=textConnection(content(respuesta, as=\"text\")))\n",
     "\n",
-    "sequences[[1]]\n",
+    "# sequences[[1]]\n",
     "\n",
     "# summary(sequences[[1]])\n",
     "\n",
     "# attributes(sequences[[1]])\n",
     "\n",
-    "# attributes(sequences[[1]])$Name"
+    "# attributes(sequences[[1]])"
    ]
   },
   {
@@ -184,36 +255,138 @@
     "\n",
     "Uniprot tiene un servicio que permite mapear identificadores entre diferentes bases de datos.\n",
     "\n",
-    "Es necesario pasarle un lista de identificadores, y decir cuales son las bases de datos (o tipo de identificadores)\n",
-    "de origen y destino.\n",
+    "Es necesario pasarle un lista de identificadores, y decir cuales son las bases\n",
     "\n",
-    "Lista de los tipos de identificadores que se pueden usar están en: https://www.uniprot.org/help/api_idmapping."
+    "de datos (o tipo de identificadores) de origen y destino.\n",
+    "\n",
+    "Lista de los tipos de identificadores que se pueden usar están en:\n",
+    "\n",
+    "- https://rest.uniprot.org/configure/idmapping/fields"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c231c4e",
-   "metadata": {},
+   "id": "80642b8a",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
-    "retrieve_url <- 'https://www.uniprot.org/uploadlists'\n",
-    "respuesta <- GET(\n",
-    "    url=retrieve_url,\n",
-    "    query=list(\n",
-    "        query=paste(ecoli_pol$Entry,collapse=\" \"),\n",
-    "        format=\"tab\",\n",
-    "        from='ACC+ID',\n",
-    "        to='PDB_ID'\n",
-    "    )\n",
+    "library(httr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "902b5126",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "req <- request(url)\n",
+    "\n",
+    "req %>% req_body_multipart(\n",
+    "  ids=\"P21802\",\n",
+    "  from=\"UniProtKB_AC-ID\",\n",
+    "  to=\"UniRef90\"\n",
+    ") %>%\n",
+    "  req_perform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b672b66",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "url <- \"https://rest.uniprot.org/idmapping/run\"\n",
+    "\n",
+    "# Define the parameters\n",
+    "params <- list(\n",
+    "  ids=\"P21802\",\n",
+    "  from=\"UniProtKB_AC-ID\",\n",
+    "  to=\"UniRef90\"\n",
+    ")\n",
+    "\n",
+    "# Perform the POST request\n",
+    "response <- POST(\n",
+    "  url ,\n",
+    "  body = params,\n",
+    "  encode=\"multipart\"\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "72108617",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c231c4e",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "retrieve_url <- 'https://rest.uniprot.org/idmapping/run/'\n",
+    "POST(\n",
+    "    url=retrieve_url,\n",
+    "    body=list(\n",
+    "        ids='P21802,P12345',\n",
+    "        from='UniProtKB_AC-ID',\n",
+    "        to='UniRef90'\n",
+    "    ),\n",
+    "    encode=\"json\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9378fa3c",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "content(respuesta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c304c6e8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "mapping <- head(read.table(text=content(respuesta), header=TRUE))"
@@ -223,7 +396,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9315f403",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "mapping"
@@ -259,7 +436,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.0.3"
+   "version": "4.1.2"
   }
  },
  "nbformat": 4,
